<resources>
    <string name="app_name">AGC</string>
    <string name="facebook_logo">Facebook Logo</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="agc_logo">AGC Logo</string>
    <string name="about_us">About Us.</string>
    <string name="team">Team.</string>
    <string name="reach_us">Reach us.</string>
    <string name="affiliattions">Affiliattions.</string>
    <string name="disclaimers">Disclaimers.</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="content_copyright_reserved">Content Copyright reserved.</string>
    <string name="tag_line_text">Lorem ipsum dolor sit ament, consectetur\nadipiscing elit</string>
    <string name="showcase_art">Showcase Art</string>
    <string name="register">register</string>
    <string name="me_as_a_collector">me as a collector</string>
    <string name="track_my_application">track my application</string>
    <string name="forward_arrow">Forward Arrow</string>
    <string name="lorem_ipsum_is_used">lorem ipsum\nis used</string>
    <string name="lorem_detail_man">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</string>
    <string name="lorem_detail_mobile">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</string>
    <string name="lorem_detail_spiral">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_detail_broadcast">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_detail_star">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_detail_mouse">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="lorem_detail_flag">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="lorem_detail_book">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="man_icon">Man Icon</string>
    <string name="mobile_icon">Mobile Icon</string>
    <string name="lorem_broadcast_icon">Lorem Broadcast Icon</string>
    <string name="lorem_stat_icon">Lorem Stat Icon</string>
    <string name="lorem_book_icon">Lorem Book Icon</string>
    <string name="lorem_flag_icon">Lorem Flag Icon</string>
    <string name="lorem_mouse_icon">Lorem Mouse Icon</string>
    <string name="lorem_spiral_icon">Lorem Spiral Icon</string>
    <string name="upload">Upload</string>
    <string name="edit">Edit</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="profile_name">john.doe</string>
    <string name="my_dashboard">My dashboard</string>
    <string name="artwork_count">50</string>
    <string name="followers_count">2.3K</string>
    <string name="exhibitions_count">21</string>
    <string name="followers">Followers</string>
    <string name="artworks">Artworks</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="likes">120</string>
    <string name="votes">43K</string>
    <string name="shares">2.3K</string>
    <string name="palette">pallette</string>
    <string name="uploads">Uploads</string>
    <string name="revenue">revenue</string>
    <string name="uploaded_image">Uploaded Image</string>
    <string name="heart_icon">Heart Icon</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="plus_icon">Plus Icon</string>
</resources>